writing oom_score_adj error: Permission denied
On Debian testing with dbus-daemon
1.12.20 (from dbus-daemon
package version 1.12.20-3
) the system log contains several:
dbus-daemon[1234]: writing oom_score_adj error: Permission denied
The logs indicate that this occurs during service activation of services in the user session such as at-spi2-registryd
for org.a11y.atspi.Registry
, mako
for org.freedesktop.Notifications
, xfconfd
for org.xfce.Xfconf
, and tumbler
for org.freedesktop.thumbnails.Thumbnailer1
on my system.
It appears that dbus-daemon
is run at oom_score_adj
200 for user sessions when started by systemd v250 and later due to https://github.com/systemd/systemd/pull/20893 . Presumably this prevents the activated service from decreasing oom_score_adj
due to lacking CAP_SYS_RESOURCE
.
Since Bug 32851, which introduced the OOM score adjustment, appears to be aimed at increasing the score adjustment (from -900 to 0), perhaps it would make sense to skip it when oom_score_adj
is already <= 0?
Thanks, Kevin